<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/rate_offer"
        android:textColor="@color/lineColor"
        android:layout_marginTop="@dimen/rate_this_app_text_margin_top"/>

    <RatingBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/rating_bar_margin_top"
        android:stepSize="0.5"
        android:rating="@string/avg_rating"
        android:scaleY="1.2"
        android:scaleX="1.2"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text = "@string/rate_bar_text"
        android:textStyle="italic"
        android:textSize="@dimen/rating_below_text_size"/>

</LinearLayout>